# adverserial-noise

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: linting.yml
adverserial_noise/attacks/: attack.py  attack_interface.py  backend_interface.py  fgsma_attack.py  pgd_attack.py
adverserial_noise/attacks/base/: backend_interface.py  pytorch_interface.py
adverserial_noise/utils/: utils.py
examples/: adverserial_fgsm.ipynb  test_adverserial.ipynb
