[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-noise"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "matplotlib",
    "pillow",
    "torchvision",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pre-commit",
    "pip-tools",
    "pytest"
]

[tool.setuptools]
packages = ["adverserial_noise"]

[tool.mypy]
strict = true
files = ["adverserial_noise", "test"]

[tool.ruff]
target-version = "py310"


[project.urls]
Repository = "https://github.com/isaadbashir/adverserial-noise.git"

